spacing fixed

--- a/src/app/sofitel-detail-page/sofitel-detail-page.component.less
+++ b/src/app/sofitel-detail-page/sofitel-detail-page.component.less
@@ -2275,6 +2275,7 @@ img {
       place-items: center;
       grid-template-columns: 1fr;
       grid-template-rows: auto auto;
+      padding-top: 30px;
 
       .head {
         h1 > span {
@@ -2340,12 +2341,12 @@ img {
     position: relative;
 
     &.grid_95 {
-      padding-top: 160px;
+      padding-top: 190px;
     }
 
     .head {
       position: absolute;
-      top: 0;
+      top: 30px;
     }
 
     .left_div {
@@ -2677,6 +2678,8 @@ img {
   }
 
   .section_3 .section_3_head {
+    margin: 0;
+    padding-top: 30px;
     .font_200 {
       font-size: 48px;
       padding-left: 5px;
@@ -2686,6 +2689,11 @@ img {
       text-align: left;
       text-indent: 0;
     }
+  }
+
+  .sofitel_wrapper .section_6_grid.grid_95 {
+    padding-top: 170px;
+    padding-bottom: 50px;
   }
 
   .sofitel_wrapper .section_5 {
